--- a/FinalProject/tutorial.html
+++ b/FinalProject/tutorial.html
@@ -5,6 +5,11 @@
     <script src="radialChart.js"></script>
     </head>
     <body>
+        <select id="dropdown">
+            <!-- Options will be added dynamically here -->
+            <option>Australia</option>
+            <option>United Kingdom</option>
+        </select>
         <p id="radialChart"></p>
     </body>
 </html>
