--- a/FinalProject/tutorial.html
+++ b/FinalProject/tutorial.html
@@ -3,13 +3,25 @@
     <head>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="radialChart.js"></script>
+    <style>
+        #radar {
+            width: 100%;
+            display: flex;
+            justify-content: center; /* Horizontally center the content */
+        }
+        #radialChart {
+            /* Optionally, you can use flexbox to center vertically */
+            display: flex;
+             /* Vertically center the content */
+        }
+
+    </style>
     </head>
     <body>
-        <select id="dropdown">
-            <!-- Options will be added dynamically here -->
-            <option>Australia</option>
-            <option>United Kingdom</option>
-        </select>
-        <p id="radialChart"></p>
+        
+        <select id="dropdown"></select>
+        <div id ='radar'>
+            <p id="radialChart"></p>
+        </div>
     </body>
 </html>
