--- a/FinalProject/bubblechart.html
+++ b/FinalProject/bubblechart.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/bubble_chart.css">
+  <select id="selectButton"></select>
 </head>
 <body>
   <div class="container">
@@ -18,6 +19,7 @@
       <a href="#" id="continent" class="button">Expenditure by Continents</a>
     </div>
     <div id="vis"></div>
+    
 
     <!-- <div class="footer">
       <p>A demonstration of animated bubble charts in JavaScript and D3.js</p>
@@ -29,18 +31,7 @@
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
 
-  <!-- PLEASE REMOVE AFTER CLONING -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-17355070-1', 'auto');
-  ga('send', 'pageview');
-
-  </script>
-  <!-- END REMOVE -->
+  
 
 
 </body>
