--- a/FinalProjectCode/index.html
+++ b/FinalProjectCode/index.html
@@ -16,9 +16,9 @@
         <h1>Investing in Health: A Deep Dive into OECD Healthcare Expenditure and Outcomes</h1>
         <p>In an era of global health challenges, understanding the financial commitment of countries to healthcare is vital. This visualization project examines healthcare expenditure per capita across OECD countries in 2022 and the percentage increase from 2015 to 2022.
          By analyzing the relationship between healthcare spending and life expectancy, as well as the allocation of resources across various healthcare categories, we offer valuable insights into investment trends and strategies. This project aims to highlight how nations prioritize health and how these decisions impact population health outcomes, fostering informed discussions on optimizing healthcare systems globally.</p>
-        <p>1. Bubble chart - Health Expenditure by OECD countries in 2022.</p>
-        <p>2. Scatter Plot - Life Expectancy versus Health Expenditure</p>
-        <p>3. Radar Chart - Health Expenditure by functions</p>   
+        <p>1. Bubble chart - Health Expenditure by OECD countries in 2022.<br>
+        2. Scatter Plot - Life Expectancy versus Health Expenditure<br>
+        3. Radar Chart - Health Expenditure by functions</p>   
     </div>
 </body>
 </html>
