--- a/FinalProjectCode/scatter_plot.html
+++ b/FinalProjectCode/scatter_plot.html
@@ -17,7 +17,9 @@
         <a href="radial_chart.html">Radial Chart</a>
     </div>
     <div class="content">
+        <h1>Life expectancy versus Health Expenditure by OECD countries from 2015 to 2021</h1>
     <div id="container2">
+        <br>
         <div id="scatterPlot">
             <svg width="700" height="500"></svg>
         </div>
@@ -30,7 +32,11 @@
         <div id="sliderContainer"></div>
         <div id="continentNote"></div>
     </div>
-    
+
+    <h1>About</h1>
+    <p>Life expectancy acts as a compass, guiding our understanding of healthcare system effectiveness and its impact on population health outcomes. Dive into this chart to uncover the fascinating 
+        evolution of this relationship from 2015 by OECD countries.
+    </p>
     
     <div id="tooltip"></div>
     <script src="src/ScatterPlot.js"></script>
