--- a/FinalProjectCode/radial_chart.html
+++ b/FinalProjectCode/radial_chart.html
@@ -15,13 +15,16 @@
         <a href="radial_chart.html">Radial Chart</a>
     </div>
     <div class="content">
-        <h2>Radial Chart</h2>
+        <h1>Health Function by OECD Countries</h1>
         <div id="radialcontainer">
             <select id="dropdown"></select>
             <div id="radar">
                 <p id="radialChart"></p>
             </div>
         </div>
+        <h2>About</h2>
+        <p>Discover the heartbeat of healthcare investment strategies! Beyond total spending, how nations allocate and prioritize resources is pivotal for optimizing healthcare efficiency. 
+            This dynamic radial chart is your gateway to benchmarking best practices among OECD countries</p>
     </div>
     <script src="src/radialChart.js"></script>
 </body>
