--- a/FinalProjectCode/bubble_chart.html
+++ b/FinalProjectCode/bubble_chart.html
@@ -40,7 +40,17 @@
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
 
+    <h2>About</h2>
+
+  <p>Health expenditure is an indicator of how commited each country is towards healthcare provision, 
+    demonstrating the resources they allocate to <br> guarantee the welfare of their populations. 
+    Dive into the world of healthcare spending with this interactive bubble chart showcasing OECD countries <br>  in 2022. Hover over 
+    each bubble to reveal in-depth information, tap 
+    into the filter button to highlight specific countries, or drag and drop to explore <br> the data your way. Click through 
+    different windows to unlock new visualizations and reveal a wealth of insights waiting to be discovered!
+    
   
+
 
 
 </body>
