--- a/FinalProjectCode/radial_chart.html
+++ b/FinalProjectCode/radial_chart.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <h2>About</h2>
-        <p>Discover the heartbeat of healthcare investment strategies! Beyond total spending, how nations allocate and prioritize resources is pivotal for optimizing healthcare efficiency. 
+        <p>Discover the heartbeat of healthcare investment strategies! Beyond total spending, how nations allocate and prioritize resources is pivotal <br> for optimizing healthcare efficiency. 
             This dynamic radial chart is your gateway to benchmarking best practices among OECD countries</p>
     </div>
     <script src="src/radialChart.js"></script>
