radial_chart.html

--- a/FinalProjectCode/radial_chart.html
+++ b/FinalProjectCode/radial_chart.html
@@ -24,7 +24,7 @@
         </div>
         <h2>About</h2>
         <p>Discover the heartbeat of healthcare investment strategies! Beyond total spending, how nations allocate and prioritize resources is pivotal <br> for optimizing healthcare efficiency. 
-            This dynamic radial chart is your gateway to benchmarking best practices among OECD countries</p>
+            This dynamic radial chart is your gateway to benchmarking best practices among OECD countries. Filter country of interest and enjoy your exploration!</p>
     </div>
     <script src="src/radialChart.js"></script>
 </body>
