scatter_plot.html

--- a/FinalProjectCode/scatter_plot.html
+++ b/FinalProjectCode/scatter_plot.html
@@ -34,8 +34,8 @@
     </div>
 
     <h2>About</h2>
-    <p>Life expectancy acts as a compass, guiding our understanding of healthcare system effectiveness and its impact on population health outcomes. Dive into this chart to uncover the fascinating 
-        evolution of this relationship from 2015 by OECD countries.
+    <p>Life expectancy acts as a compass, guiding our understanding of healthcare system effectiveness and its impact on population health outcomes <br>. Dive into this chart to uncover the fascinating 
+        evolution of this relationship from 2015 by OECD countries. Select your countries and years to uncover intriguing trends and insights!
     </p>
     
     <div id="tooltip"></div>
